--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 
     "authors": [
         {
-            "name": "Lucas Seinfeld (luchaos)",
+            "name": "luchaos",
             "email": "lcs@luchaos.at"
         }
     ],
