--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
     "name": "completionist/vanity",
-
     "description": "Completionist Vanity Cards",
-
     "type": "library",
-
     "keywords": [
         "completionist",
         "vanity",
@@ -19,11 +16,9 @@
         "steam",
         "achievements"
     ],
-
     "license": "MIT",
-
     "homepage": "http://completionist.me/",
-
+    "repository": "https://github.com/completionist/vanity",
     "authors": [
         {
             "name": "luchaos",
@@ -35,12 +30,10 @@
         "php": ">=5.4.0",
         "imagine/imagine": "^0.6.3"
     },
-
     "autoload": {
         "psr-4": {
             "Completionist\\Vanity\\": "src/"
         }
     },
-
     "minimum-stability": "stable"
 }
