--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "authors": [
         {
-            "name": "luchaos",
+            "name": "luchaos"
         }
     ],
     "require": {
